Version 1.1.0-CVS (?? ??? 2005)
 - Fixed problem with dates in nonuser calendar if LANGAUGE_DEFINED
 - Fixed bug 1369715: Event for groups hangs - javascript error perhaps
 - Fixed bug 1368071: category pop-up for tasks will not work properly
 - Fixed vulnerablity: SQL injection possible in edit_template.php,
   activity_log.php, admin_handler.php, pref_handler.php, export_handler.php
 - Fixed bug 1365435: "Availability...." has no action by clicking the button (tasks)
 - Fixed bug 1368088: viewing tasks depends on their belonging selected categories
 - Fixed bug 1365541: categories for tasks will not be saved
 - Fixed bug 1365452: 'Category' - pop-up cannot be translated completely
 - Fixed bug 1363734: 'Not available' will not be translated in admin.php
   Added logic to translate OVERRIDE_PUBLIC_TEXT if default value
 - Fixed bug 1362876: "all percentages" cannot be translated
 - Implemented PATCH 1155607: Show all days in Month with config
 - Implemented PATCH 1060025: New display_month() function
 - Fixed bug 1360780: register.php does not work
 - Implemented PATCH 1294721: single file for mod date_formats
 - Implemented RFE 1315740: German date styles
 - Fixed bug 1327661: Better german date-formats
 - Fixed bug 1350243: Wrong task order in upgrading.html (convert_passwords.php error)
 - Fixed bug 1359872: Repeat daily error
 - Fixed bug 1358775: Get an error 'Cannot find language file: translations/none.txt
 - Implemented PATCH 1221971: IMAP Authentication
 - Modified upcoming.php to display tasks (see upcoming.php for details)
 - Implemented RFE 1199126: Link Language and Time/Date Formats
 - Fixed bug 1357953: rollover info translation grammar problem
 - Fixed bug 1357943: short description length mismatch
 - Fixed bug 1357946: translation problem on system settings page
 - Fixed bug 1358124: popup: short description length problem
 - Implemented RFE 1357579: Link to 'Home' in trailer menu
 - Fixed bug 1354832: import ical - first edited event multiplies