@@ -251,7 +251,7 @@ if ( empty ( $event_status ) ) {
 }
 
 // If we have no event status yet, it must have been deleted.
-if ( ( empty ( $event_status ) && ! $is_admin ) || ! $can_view ) {
+  if ( ( empty ( $event_status ) && ! $is_admin ) || ! $can_view ) {
   echo "<h2>" . 
     translate("Error") . "</h2>" . 
     translate("You are not authorized") . ".\n";
@@ -632,7 +632,9 @@ if ( $single_user == "N" && $show_participants ) { ?>
     if ( $res ) {
       while ( $row = dbi_fetch_row ( $res ) ) {
         $pname = $row[0];
-        if ( $login == $row[0] && $row[1] == 'W' ) {
+        if ( ( $login == $row[0] || 
+          ( $is_nonuser_admin && ! empty ( $user ) && $user == $row[0] ) ) && 
+          $row[1] == 'W' ) {
           $unapproved = TRUE;
         }
         if ( $row[1] == 'A' ) {
@@ -726,30 +728,30 @@ if ( empty ( $event_status ) ) {
   $event_status = "D";
 }
 
-$can_edit = ( $is_admin || $is_nonuser_admin && ($user == $create_by) || 
-  ( $is_assistant && ! $is_private && ($user == $create_by) ) ||
-  ( $readonly != "Y" && ( $login == $create_by || $single_user == "Y" ) ) );
-  
-if ( $can_edit && $unapproved && $readonly == 'N' ) {
-  echo "<a title=\"" . 
-    translate("Approve/Confirm entry") . 
-    "\" href=\"approve_entry.php?id=$id&amp;type=E\" " .
-    "onclick=\"return confirm('" . 
-    translate("Approve this entry?", true) . "');\">" . 
-    translate("Approve/Confirm entry") . "</a><br />\n";
-  echo "<a title=\"" . 
-    translate("Reject entry") . "\" href=\"reject_entry.php?id=$id&amp;type=E\" " .
-    "onclick=\"return confirm('" .
-    translate("Reject this entry?", true) . "');\">" . 
-    translate("Reject entry") . "</a><br />\n";
-}
-
 if ( ! empty ( $user ) && $login != $user ) {
   $u_url = "&amp;user=$user";
 } else {
   $u_url = "";
 }
 
+$can_edit = ( $is_admin || $is_nonuser_admin && ($user == $create_by) || 
+  ( $is_assistant && ! $is_private && ($user == $create_by) ) ||
+  ( $readonly != "Y" && ( $login == $create_by || $single_user == "Y" ) ) );
+  
+if ( ( $is_my_event || $is_nonuser_admin ) && $unapproved && $readonly == 'N' ) {
+  echo "<a title=\"" . 
+    translate("Approve/Confirm entry") . 
+    "\" class=\"nav\" href=\"approve_entry.php?id=$id$u_url&amp;type=E\" " .
+    "onclick=\"return confirm('" . 
+    translate("Approve this entry?", true) . "');\">" . 
+    translate("Approve/Confirm entry") . "</a><br />\n";
+  echo "<a title=\"" . 
+    translate("Reject entry") .
+    "\"  class=\"nav\" href=\"reject_entry.php?id=$id$u_url&amp;type=E\" " .
+    "onclick=\"return confirm('" .
+    translate("Reject this entry?", true) . "');\">" . 
+    translate("Reject entry") . "</a><br />\n";
+}
 
 if ( $PUBLIC_ACCESS == "Y" && $login == "__public__" ) {
   $can_edit = false;
@@ -790,7 +792,7 @@ if ( $can_edit && $event_status != "D" && ! $is_nonuser ) {
       "\" class=\"nav\" href=\"del_entry.php?id=$id$u_url&amp;override=1\" " .
       "onclick=\"return confirm('" . 
       translate("Are you sure you want to delete this entry?", true) . "\\n\\n" . 
-      translate("This will delete this entry for all users.") . "');\">" . 
+      translate("This will delete this entry for all users.", true) . "');\">" . 
       translate("Delete repeating event for all dates") . "</a><br />\n";
     // Don't allow deletion of first event
     if ( ! empty ( $date ) && $date != $orig_date ) {
@@ -799,7 +801,7 @@ if ( $can_edit && $event_status != "D" && ! $is_nonuser ) {
         "\" class=\"nav\" href=\"del_entry.php?id=$id$u_url$rdate&amp;override=1\" " .
         "onclick=\"return confirm('" .
         translate("Are you sure you want to delete this entry?", true) . "\\n\\n" . 
-        translate("This will delete this entry for all users.") . "');\">" . 
+        translate("This will delete this entry for all users.", true) . "');\">" . 
         translate("Delete entry only for this date") . "</a><br />\n";
     }
   } else {
@@ -812,7 +814,7 @@ if ( $can_edit && $event_status != "D" && ! $is_nonuser ) {
       "href=\"del_entry.php?id=$id$u_url$rdate\" onclick=\"return confirm('" . 
        translate("Are you sure you want to delete this entry?", true) . "\\n\\n";
     if ( empty ( $user ) || $user == $login )
-      echo translate("This will delete this entry for all users.");
+      echo translate("This will delete this entry for all users.", true);
     echo "');\">" .  translate("Delete entry");
     if ( ! empty ( $user ) && $user != $login ) {
       user_load_variables ( $user, "temp_" );
@@ -824,13 +826,13 @@ if ( $can_edit && $event_status != "D" && ! $is_nonuser ) {
     translate("Copy entry") . "\" class=\"nav\" " .
     "href=\"edit_entry.php?id=$id$u_url&amp;copy=1\">" . 
     translate("Copy entry") . "</a><br />\n";  
-} elseif ( $readonly != "Y" && $is_my_event && $login != "__public__" &&
+} elseif ( $readonly != "Y" && ( $is_my_event || $is_nonuser_admin ) && $login != "__public__" &&
   ! $is_nonuser && $event_status != "D" )  {
   echo "<a title=\"" . 
     translate("Delete entry") . "\" class=\"nav\" " .
     "href=\"del_entry.php?id=$id$u_url$rdate\" onclick=\"return confirm('" . 
     translate("Are you sure you want to delete this entry?", true) . "\\n\\n" . 
-    translate("This will delete the entry from your calendar.") . "');\">" . 
+    translate("This will delete the entry from your calendar.", true) . "');\">" . 
     translate("Delete entry") . "</a><br />\n";
   echo "<a title=\"" . 
     translate("Copy entry") . "\" class=\"nav\" " .
@@ -843,7 +845,7 @@ if ( $readonly != "Y" && ! $is_my_event && ! $is_private && ! $is_confidential &
     translate("Add to My Calendar") . "\" class=\"nav\" " .
     "href=\"add_entry.php?id=$id\" onclick=\"return confirm('" . 
     translate("Do you want to add this entry to your calendar?", true) . "\\n\\n" . 
-    translate("This will add the entry to your calendar.") . "');\">" . 
+    translate("This will add the entry to your calendar.", true) . "');\">" . 
     translate("Add to My Calendar") . "</a><br />\n";
 }
 
